# libquentier

./: .clang-format  .clang-tidy  .travis.yml  Account_8h_source.html  ApplicationSettingsInitializationException_8h_source.html  ApplicationSettings_8h_source.html  AuthenticationManager_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  CodingStyle.md  DatabaseLockFailedException_8h_source.html  DatabaseLockedException_8h_source.html  DatabaseOpeningException_8h_source.html  DatabaseSqlErrorException_8h_source.html  DecryptedTextManager_8h_source.html  DefaultLocalStorageCacheExpiryChecker_8h_source.html  ENMLConverter_8h_source.html  EmptyDataElementException_8h_source.html  EncryptionManager_8h_source.html  ErrorString_8h_source.html  EventLoopWithExitStatus_8h_source.html  FileIOProcessorAsync_8h_source.html  FileSystemWatcher_8h_source.html  HTMLCleaner_8h_source.html  IAuthenticationManager_8h_source.html  IFavoritableDataElement_8h_source.html  ILocalStorageCacheExpiryChecker_8h_source.html  ILocalStorageDataElement_8h_source.html  INSTALL.md  INoteEditorBackend_8h_source.html  INoteStoreDataElement_8h_source.html  IQuentierException_8h_source.html  LRUCache_8hpp_source.html  LimitedStack_8h_source.html  Linkage_8h_source.html  LinkedNotebook_8h_source.html  Lists_8h_source.html  LocalStorageCacheManagerException_8h_source.html  LocalStorageCacheManager_8h_source.html  LocalStorageManagerAsync_8h_source.html  (+407 more)
src/enml/: CMakeLists.txt  Converter.cpp  Converter.h  DecryptedTextCache.cpp  DecryptedTextCache.h  DecryptedTextManager.cpp  DecryptedTextManager_p.cpp  DecryptedTextManager_p.h  ENMLConverter.cpp  ENMLConverter_p.cpp  ENMLConverter_p.h  ENMLTagsConverter.cpp  ENMLTagsConverter.h  Factory.cpp  HTMLCleaner.cpp  HtmlConverter.cpp  HtmlConverter.h  HtmlData.cpp  HtmlData.h  HtmlUtils.cpp  HtmlUtils.h  IConverter.cpp  IDecryptedTextCache.cpp  IENMLTagsConverter.cpp  IHtmlData.cpp  enml.qrc  evernote-export3.dtd
src/enml/conversion_rules/: Factory.cpp  ISkipRule.cpp  ISkipRuleBuilder.cpp  MatchMode.cpp  SkipRule.cpp  SkipRule.h  SkipRuleBuilder.cpp  SkipRuleBuilder.h
src/enml/tests/: CMakeLists.txt  ConverterTest.cpp  EnexConverterTest.cpp  main.cpp
src/local_storage/sql/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  DatabaseInfo.h  ErrorHandling.h  Fwd.h  ILinkedNotebooksHandler.h  INotebooksHandler.h  INotesHandler.h  IResourcesHandler.h  ISavedSearchesHandler.h  ISqlDatabaseWrapper.h  ISynchronizationInfoHandler.h  ITagsHandler.h  IUsersHandler.h  IVersionHandler.h  LinkedNotebooksHandler.cpp  LinkedNotebooksHandler.h  LocalStorage.cpp  LocalStorage.h  NotebooksHandler.cpp  NotebooksHandler.h  NotesHandler.cpp  NotesHandler.h  Notifier.cpp  Notifier.h  NotifierProxy.cpp  NotifierProxy.h  ResourcesHandler.cpp  ResourcesHandler.h  SavedSearchesHandler.cpp  SavedSearchesHandler.h  SqlDatabaseWrapper.cpp  SqlDatabaseWrapper.h  SynchronizationInfoHandler.cpp  SynchronizationInfoHandler.h  TablesInitializer.cpp  TablesInitializer.h  TagsHandler.cpp  TagsHandler.h  (+10 more)
src/synchronization/: AccountLimitsProvider.cpp  AccountLimitsProvider.h  AccountSyncPersistenceDirProvider.cpp  AccountSyncPersistenceDirProvider.h  AccountSynchronizer.cpp  AccountSynchronizer.h  AccountSynchronizerFactory.cpp  AccountSynchronizerFactory.h  AuthenticationInfoProvider.cpp  AuthenticationInfoProvider.h  AuthenticationManager.cpp  AuthenticationManager_p.cpp  AuthenticationManager_p.h  Authenticator.cpp  Authenticator.h  CMakeLists.txt  Downloader.cpp  Downloader.h  ExceptionHandlingHelpers.h  Factory.cpp  FullSyncStaleDataExpunger.cpp  FullSyncStaleDataExpunger.h  FullSyncStaleDataItemsExpunger.cpp  FullSyncStaleDataItemsExpunger.h  Fwd.h  IAccountLimitsProvider.h  IAccountSyncPersistenceDirProvider.h  IAccountSynchronizer.h  IAccountSynchronizerFactory.h  IAuthenticationInfoProvider.cpp  IAuthenticationInfoProvider.h  IAuthenticationManager.cpp  IAuthenticator.cpp  IAuthenticator.h  IDownloader.h  IFullSyncStaleDataExpunger.cpp  IFullSyncStaleDataExpunger.h  IInkNoteImageDownloaderFactory.h  ILinkedNotebookFinder.h  ILinkedNotebookTagsCleaner.h  (+101 more)
src/synchronization/conflict_resolvers/: Factory.cpp  Factory.h  ISimpleNoteSyncConflictResolver.h  ISimpleNotebookSyncConflictResolver.h  ISimpleSavedSearchSyncConflictResolver.h  ISimpleTagSyncConflictResolver.h  SimpleGenericSyncConflictResolver.h  SimpleNoteSyncConflictResolver.cpp  SimpleNoteSyncConflictResolver.h  SimpleNotebookSyncConflictResolver.h  (+9 more)
src/threading/: CMakeLists.txt  Factory.cpp  Future.cpp  Runnable.cpp  main.cpp
src/utility/: ApplicationSettings.cpp  CMakeLists.txt  Checks.cpp  Checks.h  DateTime.cpp  DesktopServices.cpp  EncryptionManager.cpp  EncryptionManager_p.cpp  EncryptionManager_p.h  Encryptor.cpp  Encryptor.h  EventLoopWithExitStatus.cpp  Factory.cpp  FileCopier.cpp  FileCopier.h  FileCopier_p.cpp  FileCopier_p.h  FileIOProcessorAsync.cpp  FileIOProcessorAsync_p.cpp  FileIOProcessorAsync_p.h  FileSystem.cpp  FileSystemWatcher.cpp  FileSystemWatcher_p.cpp  FileSystemWatcher_p.h  IEncryptor.cpp  IKeychainService.cpp  Initialize.cpp  KeychainService.cpp  KeychainService.h  MessageBox.cpp  PlatformUtils.cpp  Printable.cpp  Qt5FutureHelpers.h  Qt5Promise.h  QtFutureContinuations.h  QtFutureWatcherUtils.h  QtKeychainWrapper.cpp  QtKeychainWrapper.h  QuentierApplication.cpp  QuentierUndoCommand.cpp  (+21 more)
tests/synchronization/: CMakeLists.txt  FakeAuthenticator.cpp  FakeAuthenticator.h  FakeKeychainService.cpp  FakeKeychainService.h  FakeNoteStore.cpp  FakeNoteStore.h  FakeNoteStoreBackend.cpp  FakeNoteStoreBackend.h  FakeNoteStoreFactory.cpp  FakeNoteStoreFactory.h  FakeSyncStateStorage.cpp  FakeSyncStateStorage.h  FakeUserStore.cpp  FakeUserStore.h  FakeUserStoreBackend.cpp  FakeUserStoreBackend.h  FakeUserStoreFactory.cpp  FakeUserStoreFactory.h  Fwd.h  NoteStoreServer.cpp  NoteStoreServer.h  Setup.cpp  Setup.h  StopSynchronizationErrorTrigger.h  SyncEventsCollector.cpp  SyncEventsCollector.h  TestData.h  TestRunner.cpp  TestRunner.h  TestScenarioData.h  TestScenarios.h  UserStoreServer.cpp  UserStoreServer.h  main.cpp
(+1033 files in other folders)
